# LLM_integration

./: .gitignore  package.json  start-dev.sh
backend/: .env.example  Cargo.toml
backend/src/: main.rs
backend/src/routes/: chat.rs  generate.rs  mod.rs  pdf.rs  pipeline.rs  tts.rs
backend/storage/pdfs/: 07e4a330-0e64-43df-95a2-32c41fb76722.json  1c1ca965-8eca-4358-b95a-ce6df9da45f0.json  ce43cc36-5625-4c04-944b-43a5f62e6765.json
frontend/: package-lock.json  package.json
frontend/backend/: Cargo.toml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/advanced-pipeline/: page.tsx
frontend/src/app/llm-chat/: page.tsx
frontend/src/app/page-generator/: page.tsx
frontend/src/app/pdf-reader/: PdfReaderClient.tsx  page.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/components/layout/: AppShell.tsx  Sidebar.tsx
frontend/src/consts/: navigation.ts  translations.ts
frontend/src/hooks/: useTranslations.ts
frontend/src/services/: api.ts  pipeline.ts
frontend/src/store/: chatStore.ts  localeStore.ts  pipelineStore.ts
frontend/src/types/: index.ts
